--- a/skiworld-Client/src/main/resources/fxml/UpdateTransport.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateTransport.fxml
@@ -69,7 +69,7 @@
       <JFXTimePicker fx:id="arrTime" layoutX="630.0" layoutY="200.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="210.0" />
       <JFXTextField fx:id="arrPlace" layoutX="630.0" layoutY="140.0" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="110.0" />
       <JFXButton fx:id="updateButton" layoutX="436.0" layoutY="404.0" onAction="#updateAction" styleClass="btn" text="Update" />
-      <ChoiceBox layoutX="630.0" layoutY="311.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" />
+      <ChoiceBox fx:id="type" layoutX="630.0" layoutY="311.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="610.0" AnchorPane.rightAnchor="150.0" />
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
