--- a/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import java.net.URL?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
    <children>
-      <JFXButton layoutX="468.0" layoutY="152.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="100.0" />
-      <JFXButton layoutX="468.0" layoutY="275.0" onAction="#Cancel" prefWidth="100.0" styleClass="btn" text="Cancel" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="250.0" />
-      <JFXTextField fx:id="diff" layoutX="184.0" layoutY="145.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="100.0" />
-      <JFXTextField fx:id="length" layoutX="184.0" layoutY="210.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="150.0" />
-      <JFXTextField fx:id="price" layoutX="184.0" layoutY="300.0" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="200.0" />
-      <Label fx:id="difflab" layoutX="65.0" layoutY="160.0" text="Difficulty :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="100.0" />
-      <Label fx:id="lengthlab" layoutX="75.0" layoutY="230.0" text="Length :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="150.0" />
-      <Label fx:id="pricelab" layoutX="75.0" layoutY="316.0" text="Price :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="200.0" />
+      <JFXButton layoutX="369.0" layoutY="246.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="246.0" />
+      <JFXButton layoutX="369.0" layoutY="295.0" onAction="#Cancel" prefWidth="100.0" styleClass="btn" text="Cancel" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="295.0" />
+      <JFXTextField fx:id="length" layoutX="160.0" layoutY="272.0" promptText="Length" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="272.0" />
+      <JFXTextField fx:id="price" layoutX="160.0" layoutY="308.0" promptText="Price" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="308.0" />
+      <Label fx:id="difflab" layoutX="100.0" layoutY="242.0" text="Difficulty :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="242.0" />
+      <Label fx:id="lengthlab" layoutX="105.0" layoutY="269.0" text="Length :" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="269.0" />
+      <Label fx:id="pricelab" layoutX="111.0" layoutY="314.0" text="Price :" AnchorPane.leftAnchor="111.0" AnchorPane.topAnchor="314.0" />
       <Text layoutX="204.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Track" AnchorPane.topAnchor="30.0" />
+      <Label layoutX="97.0" layoutY="61.0" text="Title :" />
+      <Label layoutX="93.0" layoutY="92.0" text="Description :" />
+      <JFXTextArea fx:id="DescriptionTF" layoutX="162.0" layoutY="92.0" prefHeight="140.0" prefWidth="317.0" promptText="Description" />
+      <JFXTextField fx:id="TitleTF" layoutX="160.0" layoutY="57.0" promptText="Title" />
+      <ChoiceBox fx:id="diff" layoutX="165.0" layoutY="238.0" prefWidth="150.0" />
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
