--- a/skiworld-Client/src/main/resources/fxml/MainPage.fxml
+++ b/skiworld-Client/src/main/resources/fxml/MainPage.fxml
@@ -55,7 +55,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <Button layoutX="628.0" layoutY="87.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="60.0" style="-fx-background-color: transparent;">
+      <Button layoutX="628.0" layoutY="87.0" mnemonicParsing="false" onAction="#clickShop" prefHeight="35.0" prefWidth="60.0" style="-fx-background-color: transparent;">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
