--- a/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
@@ -6,24 +6,42 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
    <children>
-      <JFXButton layoutX="369.0" layoutY="246.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="246.0" />
-      <JFXButton layoutX="369.0" layoutY="295.0" onAction="#Cancel" prefWidth="100.0" styleClass="btn" text="Cancel" AnchorPane.rightAnchor="31.0" AnchorPane.topAnchor="295.0" />
-      <JFXTextField fx:id="length" layoutX="160.0" layoutY="272.0" promptText="Length" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="272.0" />
-      <JFXTextField fx:id="price" layoutX="160.0" layoutY="308.0" promptText="Price" AnchorPane.leftAnchor="160.0" AnchorPane.rightAnchor="180.0" AnchorPane.topAnchor="308.0" />
-      <Label fx:id="difflab" layoutX="100.0" layoutY="242.0" text="Difficulty :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="242.0" />
-      <Label fx:id="lengthlab" layoutX="105.0" layoutY="269.0" text="Length :" AnchorPane.leftAnchor="105.0" AnchorPane.topAnchor="269.0" />
-      <Label fx:id="pricelab" layoutX="111.0" layoutY="314.0" text="Price :" AnchorPane.leftAnchor="111.0" AnchorPane.topAnchor="314.0" />
-      <Text layoutX="204.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Track" AnchorPane.topAnchor="30.0" />
-      <Label layoutX="97.0" layoutY="61.0" text="Title :" />
-      <Label layoutX="93.0" layoutY="92.0" text="Description :" />
-      <JFXTextArea fx:id="DescriptionTF" layoutX="162.0" layoutY="92.0" prefHeight="140.0" prefWidth="317.0" promptText="Description" />
-      <JFXTextField fx:id="TitleTF" layoutX="160.0" layoutY="57.0" promptText="Title" />
-      <ChoiceBox fx:id="diff" layoutX="165.0" layoutY="238.0" prefWidth="150.0" />
+      <AnchorPane fx:id="TableTrack" layoutX="94.0" layoutY="78.0">
+         <children>
+            <JFXButton layoutX="281.0" layoutY="168.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" />
+            <JFXButton layoutX="281.0" layoutY="217.0" onAction="#Cancel" prefWidth="100.0" styleClass="btn" text="Cancel" />
+            <JFXTextField fx:id="length" layoutX="66.0" layoutY="194.0" promptText="Length" />
+            <JFXTextField fx:id="price" layoutX="66.0" layoutY="230.0" promptText="Price" />
+            <Label fx:id="difflab" layoutX="6.0" layoutY="164.0" text="Difficulty :" />
+            <Label fx:id="lengthlab" layoutX="11.0" layoutY="191.0" text="Length :" />
+            <Label fx:id="pricelab" layoutX="17.0" layoutY="236.0" text="Price :" />
+            <Label layoutX="11.0" layoutY="6.0" text="Title :" />
+            <Label layoutY="32.0" text="Description :" />
+            <JFXTextArea fx:id="DescriptionTF" layoutX="68.0" layoutY="32.0" prefHeight="122.0" prefWidth="317.0" promptText="Description" />
+            <JFXTextField fx:id="TitleTF" layoutX="67.0" promptText="Title" />
+            <ChoiceBox fx:id="diff" layoutX="71.0" layoutY="160.0" prefWidth="150.0" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="10.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Training Add" wrappingWidth="168.99999552965164">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutY="54.0" prefHeight="14.0" prefWidth="506.0" progress="0.0" />
+      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="187.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
