--- a/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
@@ -8,29 +8,47 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="427.0" minWidth="800.0" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
+<AnchorPane minHeight="427.0" minWidth="800.0" prefHeight="458.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
    <children>
-      <Label fx:id="Bdlab" layoutX="93.0" layoutY="217.0" text="Begining Date :" AnchorPane.leftAnchor="93.0" AnchorPane.topAnchor="217.0" />
-      <Label fx:id="Edlab" layoutX="91.0" layoutY="259.0" text="End Date :" AnchorPane.leftAnchor="91.0" AnchorPane.topAnchor="259.0" />
-      <Label fx:id="Levellab" layoutX="100.0" layoutY="306.0" text="Level :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="306.0" />
-      <Label fx:id="Numberlab" layoutX="100.0" layoutY="359.0" text="Number of Persons :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="359.0" />
-      <Label fx:id="Pricelab" layoutX="100.0" layoutY="412.0" text="Price Per Person :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="412.0" />
-      <JFXDatePicker fx:id="BdTF" layoutX="220.0" layoutY="211.0" promptText="01/01/2017" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="211.0" />
-      <JFXDatePicker fx:id="EdTF" layoutX="220.0" layoutY="253.0" promptText="01/01/02017" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="380.0" AnchorPane.topAnchor="253.0" />
-      <JFXTextField fx:id="NumberTF" labelFloat="true" layoutX="220.0" layoutY="352.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Number" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="352.0" />
-      <JFXTextField fx:id="PriceTF" labelFloat="true" layoutX="220.0" layoutY="405.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Price" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="405.0" />
-      <JFXButton layoutX="520.0" layoutY="287.0" onAction="#Add" styleClass="btn" text="Add Training" AnchorPane.leftAnchor="520.0" AnchorPane.rightAnchor="160.0" />
-      <JFXButton layoutX="537.0" layoutY="354.0" onAction="#Cancel" styleClass="btn" text="Cancel" AnchorPane.leftAnchor="520.0" AnchorPane.rightAnchor="160.0" />
-      <ChoiceBox fx:id="LevelTF" layoutX="218.0" layoutY="301.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="218.0" AnchorPane.rightAnchor="417.0" AnchorPane.topAnchor="301.0" />
-      <JFXTimePicker fx:id="BdTTF" layoutX="440.0" layoutY="211.0" promptText="00 : 00" AnchorPane.leftAnchor="440.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="211.0" />
-      <Text layoutX="347.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add A New Training" />
-      <Label layoutX="103.0" layoutY="77.0" text="Title :" />
-      <Label layoutX="101.0" layoutY="104.0" text="Description :" />
-      <JFXTextArea fx:id="DescriptionTF" layoutX="211.0" layoutY="113.0" prefHeight="78.0" prefWidth="395.0" promptText="..." />
-      <JFXTextField fx:id="TitleTF" layoutX="220.0" layoutY="73.0" promptText="Title" />
+      <AnchorPane fx:id="TableTrack" layoutX="91.0" layoutY="80.0">
+         <children>
+            <Label fx:id="Bdlab" layoutX="2.0" layoutY="137.0" text="Begining Date :" />
+            <Label fx:id="Edlab" layoutY="179.0" text="End Date :" />
+            <Label fx:id="Levellab" layoutX="9.0" layoutY="226.0" text="Level :" />
+            <Label fx:id="Numberlab" layoutX="9.0" layoutY="279.0" text="Number of Persons :" />
+            <Label fx:id="Pricelab" layoutX="9.0" layoutY="332.0" text="Price Per Person :" />
+            <JFXDatePicker fx:id="BdTF" layoutX="129.0" layoutY="131.0" promptText="01/01/2017" />
+            <JFXDatePicker fx:id="EdTF" layoutX="129.0" layoutY="173.0" promptText="01/01/02017" />
+            <JFXTextField fx:id="NumberTF" labelFloat="true" layoutX="129.0" layoutY="272.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Number" />
+            <JFXTextField fx:id="PriceTF" labelFloat="true" layoutX="129.0" layoutY="325.0" maxWidth="75.0" minWidth="64.0" prefHeight="31.0" prefWidth="75.0" promptText="Price" />
+            <JFXButton layoutX="429.0" layoutY="207.0" onAction="#Add" styleClass="btn" text="Add Training" />
+            <JFXButton layoutX="429.0" layoutY="274.0" onAction="#Cancel" styleClass="btn" text="Cancel" />
+            <ChoiceBox fx:id="LevelTF" layoutX="127.0" layoutY="221.0" prefWidth="150.0" styleClass="combo-box" />
+            <JFXTimePicker fx:id="BdTTF" layoutX="349.0" layoutY="131.0" promptText="00 : 00" />
+            <Label layoutX="13.0" layoutY="6.0" text="Title :" />
+            <Label layoutX="9.0" layoutY="33.0" text="Description :" />
+            <JFXTextArea fx:id="DescriptionTF" layoutX="127.0" layoutY="41.0" prefHeight="78.0" prefWidth="395.0" promptText="..." />
+            <JFXTextField fx:id="TitleTF" layoutX="130.0" promptText="Title" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="92.0" layoutY="35.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Training" wrappingWidth="199.99999807029963">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="287.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
+      <ProgressBar fx:id="ProgressLoading" layoutX="1.0" layoutY="49.0" prefHeight="14.0" prefWidth="800.0" progress="0.0" />
       
    </children>
    <stylesheets>
