--- a/skiworld-Client/src/main/resources/fxml/UpdateTraining.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateTraining.fxml
@@ -8,29 +8,47 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTrainingController">
    <children>
-      <Label fx:id="Bdlab" layoutX="74.0" layoutY="242.0" text="Begining Date :" AnchorPane.leftAnchor="74.0" AnchorPane.topAnchor="242.0" />
-      <Label fx:id="Edlab" layoutX="80.0" layoutY="283.0" text="End Date :" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="283.0" />
-      <Label fx:id="Levellab" layoutX="81.0" layoutY="328.0" text="Level :" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="328.0" />
-      <Label fx:id="Numberlab" layoutX="82.0" layoutY="381.0" text="Number :" AnchorPane.leftAnchor="82.0" AnchorPane.topAnchor="381.0" />
-      <Label fx:id="PriceLab" layoutX="81.0" layoutY="432.0" text="Price :" AnchorPane.leftAnchor="81.0" AnchorPane.topAnchor="432.0" />
-      <JFXDatePicker fx:id="BdTF" layoutX="170.0" layoutY="236.0" promptText="02-10-1994" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="236.0" />
-      <JFXDatePicker fx:id="EdTF" layoutX="170.0" layoutY="277.0" promptText="02-10-1994" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="277.0" />
-      <ChoiceBox fx:id="LevelTF" layoutX="170.0" layoutY="323.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="323.0" />
-      <JFXTextField fx:id="NumberTF" layoutX="170.0" layoutY="374.0" maxWidth="68.0" minWidth="68.0" prefHeight="31.0" prefWidth="68.0" promptText="Places" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="374.0" />
-      <JFXTextField fx:id="PriceTF" layoutX="170.0" layoutY="425.0" maxWidth="68.0" minWidth="68.0" prefHeight="31.0" prefWidth="68.0" promptText="Price" AnchorPane.leftAnchor="170.0" AnchorPane.topAnchor="425.0" />
-      <JFXButton layoutX="574.0" layoutY="237.0" onAction="#Update" styleClass="btn" text="Update" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="150.0" />
-      <JFXButton layoutX="576.0" layoutY="309.0" onAction="#Cancel" styleClass="btn" text="Cancel" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="250.0" />
-      <JFXTimePicker fx:id="BdTTF" layoutX="380.0" layoutY="236.0" prefHeight="28.0" prefWidth="102.0" promptText="12:12" AnchorPane.leftAnchor="380.0" AnchorPane.topAnchor="236.0" />
-      <Text layoutX="307.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Training" AnchorPane.topAnchor="20.0" />
-      <Label layoutX="74.0" layoutY="83.0" text="Title :" />
-      <Label layoutX="75.0" layoutY="116.0" text="Description :" />
-      <JFXTextField fx:id="TitleTF" layoutX="170.0" layoutY="79.0" promptText="Title" />
-      <JFXTextArea fx:id="DescriptionTF" layoutX="170.0" layoutY="116.0" prefHeight="111.0" prefWidth="352.0" promptText="..." />
+      <AnchorPane fx:id="TableTrack" layoutX="74.0" layoutY="79.0">
+         <children>
+            <Label fx:id="Bdlab" layoutY="163.0" text="Begining Date :" />
+            <Label fx:id="Edlab" layoutX="6.0" layoutY="204.0" text="End Date :" />
+            <Label fx:id="Levellab" layoutX="7.0" layoutY="249.0" text="Level :" />
+            <Label fx:id="Numberlab" layoutX="8.0" layoutY="302.0" text="Number :" />
+            <Label fx:id="Pricelab" layoutX="7.0" layoutY="353.0" text="Price :" />
+            <JFXDatePicker fx:id="BdTF" layoutX="96.0" layoutY="157.0" promptText="02-10-1994" />
+            <JFXDatePicker fx:id="EdTF" layoutX="96.0" layoutY="198.0" promptText="02-10-1994" />
+            <ChoiceBox fx:id="LevelTF" layoutX="96.0" layoutY="244.0" prefWidth="150.0" styleClass="combo-box" />
+            <JFXTextField fx:id="NumberTF" layoutX="96.0" layoutY="295.0" maxWidth="68.0" minWidth="68.0" prefHeight="31.0" prefWidth="68.0" promptText="Places" />
+            <JFXTextField fx:id="PriceTF" layoutX="96.0" layoutY="346.0" maxWidth="68.0" minWidth="68.0" prefHeight="31.0" prefWidth="68.0" promptText="Price" />
+            <JFXButton layoutX="482.0" layoutY="71.0" onAction="#Update" styleClass="btn" text="Update" />
+            <JFXButton layoutX="486.0" layoutY="171.0" onAction="#Cancel" styleClass="btn" text="Cancel" />
+            <JFXTimePicker fx:id="BdTTF" layoutX="306.0" layoutY="157.0" prefHeight="28.0" prefWidth="102.0" promptText="12:12" />
+            <Label layoutY="4.0" text="Title :" />
+            <Label layoutX="1.0" layoutY="37.0" text="Description :" />
+            <JFXTextField fx:id="TitleTF" layoutX="96.0" promptText="Title" />
+            <JFXTextArea fx:id="DescriptionTF" layoutX="96.0" layoutY="37.0" prefHeight="111.0" prefWidth="352.0" promptText="..." />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="122.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Update Training ">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="-2.0" layoutY="43.0" prefHeight="14.0" prefWidth="700.0" progress="0.0" />
+      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="335.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
