--- a/skiworld-Client/src/main/resources/fxml/EventsList.fxml
+++ b/skiworld-Client/src/main/resources/fxml/EventsList.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -24,6 +25,7 @@
       <Button fx:id="deleteEvent" layoutX="554.0" layoutY="529.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="30.0" styleClass="btn" text="Delete" AnchorPane.leftAnchor="750.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="190.0" />
       <Separator layoutY="93.0" prefHeight="2.0" prefWidth="801.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <Text layoutX="414.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="List Of Events" AnchorPane.topAnchor="20.0" />
+      <CheckBox fx:id="checkbox" layoutX="606.0" layoutY="61.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="127.0" text="Comming events" />
    </children>
    <stylesheets>
       <URL value="@../styles/menu.css" />
