--- a/skiworld-Client/src/main/resources/fxml/AffectDiscount.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AffectDiscount.fxml
@@ -4,29 +4,48 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AffectDiscountController">
    <children>
-      <Label layoutX="334.0" layoutY="20.0" text="Affect Discount" />
-      <TableView fx:id="TabShop" layoutX="152.0" layoutY="130.0" prefHeight="280.0" prefWidth="434.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="120.0">
-        <columns>
-          <TableColumn fx:id="name" prefWidth="150.0" resizable="false" text="Name" />
-          <TableColumn fx:id="category" prefWidth="100.0" resizable="false" text="Category" />
-            <TableColumn fx:id="type" prefWidth="100.0" resizable="false" text="Type" />
-            <TableColumn fx:id="price" resizable="false" text="Price" />
-        </columns>
-      </TableView>
-      <Label layoutX="255.0" layoutY="85.0" text="Shop Equipments" />
-      <ChoiceBox fx:id="choix" layoutX="473.0" layoutY="80.0" prefWidth="150.0" styleClass="combo-box" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="140.0" />
-      <Label layoutX="491.0" layoutY="54.0" text="Select Discount" AnchorPane.leftAnchor="550.0" AnchorPane.topAnchor="120.0" />
-      <Button fx:id="affd" layoutX="513.0" layoutY="147.0" mnemonicParsing="false" onAction="#discount" styleClass="btn" text="Affect Discount" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="180.0" />
-      <Button fx:id="ref" layoutX="444.0" layoutY="398.0" mnemonicParsing="false" onAction="#Refrech" styleClass="btn" text="Refresh" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="400.0" />
-      <Button fx:id="old" layoutX="522.0" layoutY="268.0" mnemonicParsing="false" onAction="#oldPrice" styleClass="btn" text="Old Price" AnchorPane.bottomAnchor="160.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="100.0" />
-      <TextField fx:id="T" layoutX="513.0" layoutY="306.0" prefHeight="25.0" prefWidth="82.0" AnchorPane.bottomAnchor="120.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="100.0" />
+      <AnchorPane fx:id="elements" layoutX="80.0" layoutY="85.0">
+         <children>
+            <TableView fx:id="TabShop" layoutY="35.0" prefHeight="280.0" prefWidth="434.0">
+              <columns>
+                <TableColumn fx:id="name" prefWidth="150.0" resizable="false" text="Name" />
+                <TableColumn fx:id="category" prefWidth="100.0" resizable="false" text="Category" />
+                  <TableColumn fx:id="type" prefWidth="100.0" resizable="false" text="Type" />
+                  <TableColumn fx:id="price" resizable="false" text="Price" />
+              </columns>
+            </TableView>
+            <Label layoutX="175.0" text="Shop Equipments" />
+            <ChoiceBox fx:id="choix" layoutX="470.0" layoutY="55.0" prefWidth="150.0" styleClass="combo-box" />
+            <Label layoutX="470.0" layoutY="35.0" text="Select Discount" />
+            <Button fx:id="affd" layoutX="470.0" layoutY="95.0" mnemonicParsing="false" onAction="#discount" styleClass="btn" text="Affect Discount" />
+            <Button fx:id="ref" layoutX="185.0" layoutY="328.0" mnemonicParsing="false" onAction="#Refrech" styleClass="btn" text="Refresh" />
+            <Button fx:id="old" layoutX="470.0" layoutY="228.0" mnemonicParsing="false" onAction="#oldPrice" styleClass="btn" text="Old Price" />
+            <TextField fx:id="T" layoutX="470.0" layoutY="265.0" prefHeight="25.0" prefWidth="82.0" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="110.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Affect Discount" AnchorPane.leftAnchor="100.0">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="46.0" prefWidth="200.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="300.0">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
       <URL value="@../styles/menu.css" />
