--- a/skiworld-Client/src/main/resources/fxml/Shop.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Shop.fxml
@@ -2,53 +2,71 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane accessibleText="research" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.ShopController">
    <children>
-      <TabPane layoutX="161.0" layoutY="106.0" prefHeight="300.0" prefWidth="500.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="110.0">
-        <tabs>
-          <Tab text="Shop">
-               <content>
-                  <TableView fx:id="TabShop" prefHeight="221.0" prefWidth="700.0">
-                    <columns>
-                      <TableColumn fx:id="name" prefWidth="192.0" text="Name" />
-                      <TableColumn fx:id="Categorie" prefWidth="97.0" text="Categorie" />
-                        <TableColumn fx:id="type" text="Type" />
-                        <TableColumn fx:id="price" prefWidth="77.0" text="Price" />
-                        <TableColumn fx:id="shopq" prefWidth="154.0" text="shopquantity" />
-                    </columns>
-                  </TableView>
-               </content>
-            </Tab>
-          <Tab text="Inventory">
-               <content>
-                  <TableView fx:id="TabInventory" onMouseClicked="#InventoryUpdate" prefHeight="200.0" prefWidth="200.0">
-                    <columns>
-                      <TableColumn fx:id="Name1" prefWidth="233.0" text="Name" />
-                      <TableColumn fx:id="categorie1" prefWidth="98.0" text="Categorie" />
-                        <TableColumn fx:id="type1" prefWidth="77.0" text="Type" />
-                        <TableColumn fx:id="price1" prefWidth="73.0" text="Price" />
-                        <TableColumn fx:id="invq1" prefWidth="115.0" text="Inventory Quantity" />
-                    </columns>
-                  </TableView>
-               </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-      <TextField fx:id="text" layoutX="100.0" layoutY="71.0" promptText="Search..." AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="70.0" />
-      <Button fx:id="del" layoutX="149.0" layoutY="384.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="30.0" styleClass="btn" text="Delete Equipement" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="200.0" />
-      <Button fx:id="ad" layoutX="385.0" layoutY="384.0" mnemonicParsing="false" onAction="#ajout" prefHeight="30.0" styleClass="btn" text="Add Equipement" AnchorPane.bottomAnchor="40.0" AnchorPane.rightAnchor="400.0" />
-      <Button fx:id="act" layoutX="736.0" layoutY="46.0" mnemonicParsing="false" onAction="#refresh" prefHeight="30.0" styleClass="btn" text="Refresh" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="70.0" />
-      <Button fx:id="move" layoutX="717.0" layoutY="137.0" mnemonicParsing="false" onAction="#moveToShop" styleClass="btn" text="Move To Shop" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="50.0" />
-      <TextField fx:id="Tq" layoutX="717.0" layoutY="183.0" prefHeight="30.0" prefWidth="93.0" promptText="Quantity" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="50.0" />
-      <Text layoutX="436.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Shop" AnchorPane.topAnchor="20.0" />
+      <AnchorPane fx:id="elements" layoutX="100.0" layoutY="70.0">
+         <children>
+            <TabPane prefHeight="300.0" prefWidth="500.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="40.0">
+              <tabs>
+                <Tab text="Shop">
+                     <content>
+                        <TableView fx:id="TabShop" prefHeight="221.0" prefWidth="700.0">
+                          <columns>
+                            <TableColumn fx:id="name" prefWidth="192.0" text="Name" />
+                            <TableColumn fx:id="Categorie" prefWidth="97.0" text="Categorie" />
+                              <TableColumn fx:id="type" text="Type" />
+                              <TableColumn fx:id="price" prefWidth="77.0" text="Price" />
+                              <TableColumn fx:id="shopq" prefWidth="154.0" text="shopquantity" />
+                          </columns>
+                        </TableView>
+                     </content>
+                  </Tab>
+                <Tab text="Inventory">
+                     <content>
+                        <TableView fx:id="TabInventory" onMouseClicked="#InventoryUpdate" prefHeight="200.0" prefWidth="200.0">
+                          <columns>
+                            <TableColumn fx:id="Name1" prefWidth="233.0" text="Name" />
+                            <TableColumn fx:id="categorie1" prefWidth="98.0" text="Categorie" />
+                              <TableColumn fx:id="type1" prefWidth="77.0" text="Type" />
+                              <TableColumn fx:id="price1" prefWidth="73.0" text="Price" />
+                              <TableColumn fx:id="invq1" prefWidth="115.0" text="Inventory Quantity" />
+                          </columns>
+                        </TableView>
+                     </content>
+                  </Tab>
+              </tabs>
+            </TabPane>
+            <TextField fx:id="text" promptText="Search..." />
+            <Button fx:id="del" layoutX="451.0" layoutY="360.0" mnemonicParsing="false" onAction="#supprimer" prefHeight="30.0" styleClass="btn" text="Delete Equipement" />
+            <Button fx:id="ad" layoutX="264.0" layoutY="360.0" mnemonicParsing="false" onAction="#ajout" prefHeight="30.0" styleClass="btn" text="Add Equipement" />
+            <Button fx:id="act" layoutX="515.0" mnemonicParsing="false" onAction="#refresh" prefHeight="30.0" styleClass="btn" text="Refresh" />
+            <Button fx:id="move" layoutX="620.0" layoutY="67.0" mnemonicParsing="false" onAction="#moveToShop" styleClass="btn" text="Move To Shop" />
+            <TextField fx:id="Tq" layoutX="620.0" layoutY="113.0" prefHeight="30.0" prefWidth="93.0" promptText="Quantity" />
+         </children>
+      </AnchorPane>
+      <Text fill="#2b579a" layoutX="110.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Equipment List">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Text>
+      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="46.0" prefWidth="200.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="300.0">
+         <image>
+            <Image url="@../images/loading.GIF" />
+         </image>
+      </ImageView>
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
